--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,8 @@
 File:
-- C:\CODE\IDE\main.nut
-- C:\CODE\assets\main.nut
+- C:/CODE/assets/main.nut
+- C:/CODE/assets/commo.nut
 Project:
-- C:\CODE\assets\
-- C:\CODE\IDE\
-- !!python/unicode 'C:/CODE/Icons'
+- C:/CODE/assets/
 Recent:
 - C:\CODE\IDE\main.nut
 Setting:
