--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,10 @@
 File:
 - C:/CODE/assets/main.nut
+- C:/CODE/assets/physics.nut
+- C:/CODE/assets/titlescene.nut
 Project:
 - C:/CODE/assets/
+- C:/CODE/data/
 Recent:
 - C:\CODE\IDE\main.nut
 Setting:
