--- a/config.yaml
+++ b/config.yaml
@@ -5,14 +5,15 @@ ADB:
 - adb -d shell ps | grep com.emo_framework.examples | awk '{print $2}' | xargs adb
   shell kill
 File:
-- C:/CODE/assetsdd/physics.nut
+- C:/CODE/assetsdd/common.nut
+- C:/CODE/assetsdd/howtoscene.nut
 Project:
 - C:/CODE/data/
 - C:/CODE/assetsdd/
 Recent:
 - C:\CODE\main.nut
 Setting:
-  fontname: Courier
+  fontname: Courier New
   fontsize: 10
   iconsize: 16
   style: 0
