Changed all icons to png and to globals

--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ ANT:
 File:
 - C:/CODE/assets/creditscene.nut
 - C:/CODE/assets/main.nut
+- C:/CODE/assets/logoscene.nut
 Project:
 - C:/CODE/data/
 - C:/CODE/assets/
